--- a/resources/css/partials/globals.css
+++ b/resources/css/partials/globals.css
@@ -53,11 +53,11 @@ article > *:not(.entry-content),
 		@apply mb-8;
 	}
 
-	ul:not(.block-editor-block-variation-picker__variations) {
+	/* ul:not(.block-editor-block-variation-picker__variations) {
 		li {
 			@apply list-disc list-inside;
 		}
-	}
+	} */
 
 	ol {
 		li {
