--- a/css/editor-style.css
+++ b/css/editor-style.css
@@ -132,6 +132,45 @@
 		color: rgb(21 99 110 / var(--tw-text-opacity));
 		font-size: clamp(1.75rem, -0.3833rem + 5.3333vw, 2.75rem);
 }
+	.more-open {
+		position: relative;
+		margin-bottom: 1.25rem;
+		display: block;
+		cursor: pointer;
+		text-align: center;
+		font-size: .9375rem;
+		text-transform: uppercase;
+		--tw-text-opacity: 1;
+		color: rgb(72 80 80 / var(--tw-text-opacity));
+		letter-spacing: 2px;
+}
+		.more-open svg {
+		margin-left: auto;
+		margin-right: auto;
+		margin-top: .3125rem;
+		display: block;
+		fill: #930027;
+		transition-duration: 300ms;
+			transition-property: fill;
+}
+
+		.more-open.active svg {
+			transform: rotate(45deg);
+		}
+		.more-open:hover svg {
+		fill: #15636E;
+}
+		.more-open:before {
+		position: absolute;
+		left: 0px;
+		bottom: 23px;
+		height: 1px;
+		width: 100%;
+		--tw-bg-opacity: 1;
+		background-color: rgb(188 188 188 / var(--tw-bg-opacity));
+			content: " ";
+			z-index: -1;
+}
 .visible {
 		visibility: visible;
 }
@@ -186,6 +225,9 @@
 .my-8 {
 		margin-top: 0.5rem;
 		margin-bottom: 0.5rem;
+}
+.mb-0 {
+		margin-bottom: 0;
 }
 .mb-20 {
 		margin-bottom: 1.25rem;
@@ -249,6 +291,9 @@
 }
 .h-\[40px\] {
 		height: 40px;
+}
+.max-h-\[1500px\] {
+		max-height: 1500px;
 }
 .min-h-screen {
 		min-height: 100vh;
@@ -319,9 +364,15 @@
 .gap-4 {
 		gap: 1rem;
 }
+.gap-\[2\%\] {
+		gap: 2%;
+}
 .gap-x-4 {
 		-moz-column-gap: 1rem;
 		     column-gap: 1rem;
+}
+.overflow-clip {
+		overflow: clip;
 }
 .rounded {
 		border-radius: 0.25rem;
@@ -378,6 +429,9 @@
 .bg-opacity-0 {
 		--tw-bg-opacity: 0;
 }
+.fill-primary {
+		fill: #930027;
+}
 .px-20 {
 		padding-left: 1.25rem;
 		padding-right: 1.25rem;
@@ -410,6 +464,9 @@
 }
 .pr-0 {
 		padding-right: 0;
+}
+.pr-20 {
+		padding-right: 1.25rem;
 }
 .pt-35 {
 		padding-top: 2.1875rem;
@@ -531,6 +588,9 @@
 }
 .duration-300 {
 		transition-duration: 300ms;
+}
+.duration-500 {
+		transition-duration: 500ms;
 }
 .alignfull {
 		margin: 0.5rem calc(50% - 50vw) !important;
@@ -777,7 +837,11 @@
 		left: 0.75rem;
 }
 .entry-content .image-pathways__more-content, .block-editor-block-list__layout .image-pathways__more-content {
-		margin-bottom: 1.25rem;
+		padding-bottom: 1.25rem;
+}
+.entry-content .image-pathways__more-content p, .block-editor-block-list__layout .image-pathways__more-content p {
+		margin-bottom: 0;
+		padding-bottom: .625rem;
 }
 .entry-content .image-pathways__more-open, .block-editor-block-list__layout .image-pathways__more-open {
 		position: relative;
@@ -789,13 +853,22 @@
 		text-transform: uppercase;
 		--tw-text-opacity: 1;
 		color: rgb(72 80 80 / var(--tw-text-opacity));
-			letter-spacing: 2px;
+		letter-spacing: 2px;
 }
 .entry-content .image-pathways__more-open svg, .block-editor-block-list__layout .image-pathways__more-open svg {
 		margin-left: auto;
 		margin-right: auto;
 		margin-top: .3125rem;
 		display: block;
+		fill: #930027;
+		transition-duration: 300ms;
+			transition-property: fill;
+}
+.entry-content .image-pathways__more-open.active svg, .block-editor-block-list__layout .image-pathways__more-open.active svg {
+			transform: rotate(45deg);
+		}
+.entry-content .image-pathways__more-open:hover svg, .block-editor-block-list__layout .image-pathways__more-open:hover svg {
+		fill: #15636E;
 }
 .entry-content .image-pathways__more-open:before, .block-editor-block-list__layout .image-pathways__more-open:before {
 		position: absolute;
@@ -805,8 +878,8 @@
 		width: 100%;
 		--tw-bg-opacity: 1;
 		background-color: rgb(188 188 188 / var(--tw-bg-opacity));
-				content: " ";
-				z-index: -1;
+			content: " ";
+			z-index: -1;
 }
 .entry-content .application-status, .block-editor-block-list__layout .application-status {
 		--tw-bg-opacity: 1;
@@ -1029,8 +1102,6 @@
 				left: 25%;
 		}
 }
-.entry-content .comparison, .block-editor-block-list__layout .comparison {
-	}
 .entry-content .fifty--blue, .block-editor-block-list__layout .fifty--blue {
 		--tw-bg-opacity: 1;
 		background-color: rgb(21 99 110 / var(--tw-bg-opacity));
@@ -1190,12 +1261,42 @@
 		--tw-bg-opacity: 1;
 		background-color: rgb(228 238 238 / var(--tw-bg-opacity));
 }
+.entry-content .comparison__item-inner, .block-editor-block-list__layout .comparison__item-inner {
+		overflow: clip;
+		transition-property: all;
+		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+		transition-duration: 500ms;
+}
+@media (min-width: 1150px) {
+		.entry-content .comparison__item-inner, .block-editor-block-list__layout .comparison__item-inner {
+				max-height: 348px;
+		}
+}
+.entry-content .comparison__item-inner.active, .block-editor-block-list__layout .comparison__item-inner.active {
+		max-height: 1500px;
+}
+@media (min-width: 1150px) {
+		.entry-content .comparison.active .comparison__item-inner, .block-editor-block-list__layout .comparison.active .comparison__item-inner {
+				max-height: 1500px;
+		}
+}
 .entry-content .comparison__grid, .block-editor-block-list__layout .comparison__grid {
 		display: flex;
-		gap: 1.5rem;
+		flex-wrap: wrap;
+		gap: 2%;
 }
 .entry-content .comparison__grid > div, .block-editor-block-list__layout .comparison__grid > div {
-		width: 25%;
+		width: 100%;
+}
+@media (min-width: 768px) {
+		.entry-content .comparison__grid > div, .block-editor-block-list__layout .comparison__grid > div {
+				width: 48%;
+		}
+}
+@media (min-width: 1150px) {
+		.entry-content .comparison__grid > div, .block-editor-block-list__layout .comparison__grid > div {
+				width: 23%;
+		}
 }
 .entry-content .comparison__headline, .block-editor-block-list__layout .comparison__headline {
 		text-align: center;
@@ -1229,6 +1330,7 @@
 .entry-content .comparison__attributes ul, .block-editor-block-list__layout .comparison__attributes ul {
 		padding-left: 2.5rem;
 		padding-right: 1.25rem;
+		padding-bottom: 1.25rem;
 }
 .entry-content .comparison__attributes li, .block-editor-block-list__layout .comparison__attributes li {
 		margin-bottom: .625rem;
@@ -1250,13 +1352,22 @@
 		text-transform: uppercase;
 		--tw-text-opacity: 1;
 		color: rgb(72 80 80 / var(--tw-text-opacity));
-			letter-spacing: 2px;
+		letter-spacing: 2px;
 }
 .entry-content .comparison__more-open svg, .block-editor-block-list__layout .comparison__more-open svg {
 		margin-left: auto;
 		margin-right: auto;
 		margin-top: .3125rem;
 		display: block;
+		fill: #930027;
+		transition-duration: 300ms;
+			transition-property: fill;
+}
+.entry-content .comparison__more-open.active svg, .block-editor-block-list__layout .comparison__more-open.active svg {
+			transform: rotate(45deg);
+		}
+.entry-content .comparison__more-open:hover svg, .block-editor-block-list__layout .comparison__more-open:hover svg {
+		fill: #15636E;
 }
 .entry-content .comparison__more-open:before, .block-editor-block-list__layout .comparison__more-open:before {
 		position: absolute;
@@ -1266,8 +1377,57 @@
 		width: 100%;
 		--tw-bg-opacity: 1;
 		background-color: rgb(188 188 188 / var(--tw-bg-opacity));
-				content: " ";
-				z-index: -1;
+			content: " ";
+			z-index: -1;
+}
+.entry-content .comparison__more-open, .block-editor-block-list__layout .comparison__more-open {
+		display: none;
+}
+@media (min-width: 1150px) {
+		.entry-content .comparison__more-open, .block-editor-block-list__layout .comparison__more-open {
+				display: block;
+		}
+}
+.entry-content .comparison__more-open--mobile, .block-editor-block-list__layout .comparison__more-open--mobile {
+		position: relative;
+		margin-bottom: 1.25rem;
+		display: block;
+		cursor: pointer;
+		text-align: center;
+		font-size: .9375rem;
+		text-transform: uppercase;
+		--tw-text-opacity: 1;
+		color: rgb(72 80 80 / var(--tw-text-opacity));
+		letter-spacing: 2px;
+}
+.entry-content .comparison__more-open--mobile svg, .block-editor-block-list__layout .comparison__more-open--mobile svg {
+		margin-left: auto;
+		margin-right: auto;
+		margin-top: .3125rem;
+		display: block;
+		fill: #930027;
+		transition-duration: 300ms;
+			transition-property: fill;
+}
+.entry-content .comparison__more-open--mobile.active svg, .block-editor-block-list__layout .comparison__more-open--mobile.active svg {
+			transform: rotate(45deg);
+		}
+.entry-content .comparison__more-open--mobile:hover svg, .block-editor-block-list__layout .comparison__more-open--mobile:hover svg {
+		fill: #15636E;
+}
+.entry-content .comparison__more-open--mobile:before, .block-editor-block-list__layout .comparison__more-open--mobile:before {
+		position: absolute;
+		left: 0px;
+		bottom: 23px;
+		height: 1px;
+		width: 100%;
+		--tw-bg-opacity: 1;
+		background-color: rgb(188 188 188 / var(--tw-bg-opacity));
+			content: " ";
+			z-index: -1;
+}
+.entry-content .comparison__more-open--mobile, .block-editor-block-list__layout .comparison__more-open--mobile {
+		display: none;
 }
 .entry-content .comparison__button-wrapper, .block-editor-block-list__layout .comparison__button-wrapper {
 		margin-top: 2.5rem;
@@ -1438,6 +1598,9 @@ body {
 		.md\:w-\[375px\] {
 				width: 375px;
 		}
+		.md\:w-\[48\%\] {
+				width: 48%;
+		}
 		.md\:w-\[50px\] {
 				width: 50px;
 		}
@@ -1482,6 +1645,20 @@ body {
 		}
 		.lg\:hidden {
 				display: none;
+		}
+}
+@media (min-width: 1150px) {
+		.xl\:block {
+				display: block;
+		}
+		.xl\:max-h-\[1500px\] {
+				max-height: 1500px;
+		}
+		.xl\:max-h-\[348px\] {
+				max-height: 348px;
+		}
+		.xl\:w-\[23\%\] {
+				width: 23%;
 		}
 }
 
