--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,6 +6,7 @@
 @import "./slick/slick-theme.css";
 
 @import "./glightbox.min.css";
+@import "./jquery.modal.min.css";
 /* @import "./plyr.min.css"; */
 
 @import "components.css";
