--- a/resources/css/components.css
+++ b/resources/css/components.css
@@ -55,6 +55,11 @@
 			content: " ";
 			background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16' fill='none'%3E%3Cpath d='M11.9213 8.53129L5.84805 14.6045C5.55514 14.8974 5.08027 14.8974 4.78739 14.6045L4.07905 13.8962C3.78664 13.6038 3.78608 13.1299 4.0778 12.8368L8.89095 8.00095L4.0778 3.16516C3.78608 2.87207 3.78664 2.39816 4.07905 2.10576L4.78739 1.39741C5.0803 1.10451 5.55517 1.10451 5.84805 1.39741L11.9213 7.47063C12.2142 7.76351 12.2142 8.23838 11.9213 8.53129Z' fill='%23F5F5F8'/%3E%3C/svg%3E");
 		}
+		&--chev-blk {
+			@apply text-12 pl-20 pt-[3px]  top-[2px] left-2 relative transition-all duration-300 bg-no-repeat;
+			content: " ";
+			background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16' fill='none'%3E%3Cpath d='M11.9213 8.53324L5.84805 14.6065C5.55514 14.8994 5.08027 14.8994 4.78739 14.6065L4.07905 13.8981C3.78664 13.6057 3.78608 13.1318 4.0778 12.8387L8.89095 8.0029L4.0778 3.16712C3.78608 2.87402 3.78664 2.40012 4.07905 2.10771L4.78739 1.39937C5.0803 1.10646 5.55517 1.10646 5.84805 1.39937L11.9213 7.47259C12.2142 7.76546 12.2142 8.24034 11.9213 8.53324Z' fill='%23000'/%3E%3C/svg%3E");
+		}
 	}
 	.headline-main {
 		@apply text-secondary text-center font-700 font-primary mb-10;
@@ -80,4 +85,12 @@
 			z-index: -1;
 		}
 	}
+}
+
+.screen-reader-text {
+	height: 1px;
+	width: 1px;
+	position: absolute;
+	overflow: hidden;
+	top: -10px;
 }
