--- a/resources/css/partials/globals.css
+++ b/resources/css/partials/globals.css
@@ -1,5 +1,8 @@
 body {
-	@apply font-sr text-darkestgray;
+	@apply font-sr text-darkestgray overflow-x-hidden;
+	> div {
+		@apply overflow-x-hidden;
+	}
 }
 
 /* **************************    EXTRA CONTAINERS    ************************** */
@@ -366,7 +369,7 @@ article > *:not(.entry-content),
 								contrast(138%);
 						}
 					}
-					a {
+					&.menu-item-has-children a {
 						&::after {
 							@apply font-fontawesome text-12 pl-10 left-1 relative;
 							content: " ";
@@ -484,6 +487,10 @@ article > *:not(.entry-content),
 
 .site-footer {
 	@apply bg-midgray text-white py-50;
+	background-image: url("data:image/svg+xml,%3Csvg version='1.1' id='Layer_3' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 1440 340' style='enable-background:new 0 0 1440 340;' xml:space='preserve'%3E%3Cstyle type='text/css'%3E .st0%7Bfill:%23485050;%7D .st1%7Bclip-path:url(%23SVGID_00000137825915116312379850000002207241429754795931_);fill:%23418DE0;%7D .st2%7Bclip-path:url(%23SVGID_00000137825915116312379850000002207241429754795931_);fill:none;%7D .st3%7Bclip-path:url(%23SVGID_00000137825915116312379850000002207241429754795931_);%7D .st4%7Bfill:%23454E4D;%7D .st5%7Bfill:%23418DE0;%7D .st6%7Bfill:%23414848;%7D .st7%7Bfill:%233E4647;%7D .st8%7Bfill:%23424949;%7D%0A%3C/style%3E%3Crect y='0' class='st0' width='1440' height='340'/%3E%3Cg%3E%3Cdefs%3E%3Crect id='SVGID_1_' y='0' width='1440' height='340'/%3E%3C/defs%3E%3CclipPath id='SVGID_00000165944575515853685980000010549570124744955009_'%3E%3Cuse xlink:href='%23SVGID_1_' style='overflow:visible;'/%3E%3C/clipPath%3E%3Cpolygon style='clip-path:url(%23SVGID_00000165944575515853685980000010549570124744955009_);fill:%23418DE0;' points='-706,896.4 -390.3,896.4 -390.3,895.8 '/%3E%3Cpath style='clip-path:url(%23SVGID_00000165944575515853685980000010549570124744955009_);fill:%23418DE0;' d='M-366.9,895.7 c-0.4,0.2-0.9,0.5-1.3,0.7h-22.1v-0.6L-366.9,895.7z'/%3E%3Cline style='clip-path:url(%23SVGID_00000165944575515853685980000010549570124744955009_);fill:none;' x1='-24.1' y1='896.4' x2='-27.3' y2='896.4'/%3E%3Cpath style='clip-path:url(%23SVGID_00000165944575515853685980000010549570124744955009_);fill:%23418DE0;' d='M-24,896.4 c0,0-0.1,0-0.1,0h-3.1c0,0,0.1,0,0.1,0H-24z'/%3E%3Cg style='clip-path:url(%23SVGID_00000165944575515853685980000010549570124744955009_);'%3E%3Cpath class='st4' d='M1475.6,324.6c-133.5-13.7-267.1-20.5-404-20.5c-340.9,0-681.7,46.7-1009.4,128.5 c-63.6,28.8-126.6,59-189.1,90.7h401.7c387.1-117.7,800.8-184.9,1214.6-184.9c26.4,0,52.7,0.3,78.9,0.8c1.7,0,3.4,0.1,5.1,0.1 c7.5,0.2,15.1,0.3,22.6,0.6C1557.2,334.3,1517.1,329.2,1475.6,324.6z'/%3E%3Cpath class='st4' d='M773.6,178.8C532.3,242.3,293.9,327.7,62.2,432.6c-63.6,28.8-126.6,59-189.1,90.7h-30.7v2l-334.1,0.7 c109.6-56.6,221.2-109,334.1-156.9c92.9-39.4,186.8-75.7,281.5-108.8C331.2,223.7,547.6,196.2,773.6,178.8z'/%3E%3Crect x='2564.4' y='146.6' class='st5' width='0' height='91'/%3E%3Cpolygon class='st5' points='2564.4,290.4 2564.4,502.7 2564.4,502.7 2564.4,237.5 2564.4,237.5 '/%3E%3Cpath class='st5' d='M2564.4,146.6c-18.3-4.7-36.9-9.3-55.7-13.7L2564.4,146.6z'/%3E%3Cpath class='st6' d='M1815.3,47.8c-19.6-0.3-39.3-0.5-58.9-0.5c-262,0-527,29.6-789.8,85.6c-64.5,13.7-128.8,29.1-192.9,46 c-226,17.4-442.5,44.9-649.8,81.4c143.2-50.1,288.2-92.7,433.9-127.3c291.2-69.1,585.7-106.1,876.8-106.1 c126.7,0,253.4,6.8,376.6,20.5C1812.5,47.4,1813.9,47.6,1815.3,47.8z'/%3E%3Cpath class='st0' d='M1883.1,358.9c-95.2-10-190.5-16.4-287.1-19.1c-7.5-0.2-15.1-0.4-22.6-0.6c-1.7,0-3.4-0.1-5.1-0.1 c50.6,5.9,99.1,12.3,145.8,19.3c272.4,40.9,479.5,99.9,632.7,161.8l3.2,0l214.5-0.4v-17.1C2393.2,444.5,2170.7,389.7,1883.1,358.9 z'/%3E%3Cpath class='st7' d='M2564.4,237.5v52.9c-356.1-85.6-811.5-133.5-1208.7-133.5c-200.8,0-394.7,7.5-582.1,22 c64.1-16.9,128.5-32.2,192.9-46c262.8-56,527.8-85.6,789.8-85.6c19.7,0,39.3,0.2,58.9,0.5c159.2,19.3,309.7,47.3,449.2,85.1 C2371.3,161.8,2471.7,196.5,2564.4,237.5z'/%3E%3Cpath class='st0' d='M2564.4,146.6v91c-92.8-41-193.1-75.7-300-104.7c-139.5-37.8-290-65.7-449.2-85.1c107,1.8,213.6,8.5,317.7,20 c130,14.8,257.4,37.2,375.7,65.1C2527.5,137.3,2546.1,141.9,2564.4,146.6z'/%3E%3Cpath class='st8' d='M2564.4,290.4v212.3c-171.2-58.2-393.8-113-681.4-143.8c-95.2-10-190.5-16.4-287.1-19.1 c-38.8-5.5-78.9-10.6-120.4-15.2c-133.5-13.7-267.1-20.5-404-20.5c-340.9,0-681.7,46.7-1009.4,128.5 c231.7-104.8,470.1-190.2,711.4-253.7c187.4-14.4,381.4-22,582.1-22C1752.9,156.8,2208.3,204.8,2564.4,290.4z'/%3E%3Cpath class='st0' d='M2346.8,520.2l-56.3,0.1l-1438,2.9H274.7c387.1-117.7,800.8-184.9,1214.6-184.9c26.4,0,52.7,0.3,78.9,0.8 c50.6,5.9,99.1,12.3,145.8,19.3C1986.5,399.3,2193.5,458.3,2346.8,520.2z'/%3E%3Cpath class='st0' d='M123.8,260.2C29.2,293.3-64.7,329.6-157.6,369c-113,47.9-224.5,100.3-334.1,156.9l-25.4,0.1l-342.4,0.7v-6.8 c110.8-40,224.9-77.1,342.4-111.2c116.5-33.8,236.3-64.6,359.5-92.2C-65.7,295.8,28.1,277,123.8,260.2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E%0A");
+	background-position: 50% 100%;
+	background-repeat: no-repeat;
+	/* background-size: cover; */
 	&__grid {
 		@apply grid gap-4 lg:gap-[3%] grid-cols-6;
 
@@ -624,6 +631,9 @@ article > *:not(.entry-content),
 	}
 }
 
+.slick-dotted.slick-slider {
+	@apply mb-0;
+}
 .mainstage .slick-dots {
 	@apply bottom-[-35px] md:bottom-[-40px];
 	li {
